--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@react-native-community/masked-view": "0.1.10",
     "axios": "^1.1.3",
     "expo": "^44.0.0",
+    "expo-linear-gradient": "~11.0.3",
+    "expo-location": "~14.0.1",
     "expo-status-bar": "~1.2.0",
+    "lottie-react-native": "^5.1.4",
     "moment": "^2.29.4",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -22,8 +25,7 @@
     "react-native-screens": "~3.10.1",
     "react-native-web": "0.17.1",
     "react-navigation": "^4.4.4",
-    "react-navigation-stack": "^2.10.4",
-    "expo-location": "~14.0.1"
+    "react-navigation-stack": "^2.10.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
